add block content

--- a/index.html
+++ b/index.html
@@ -9,21 +9,33 @@
   <body>
     <div class="content">
       <div class="content__wrapper-text">
-        <h1>Стань частью команды!</h1>
-        <p>
+        <h1 class="content__title title">
+          Стань частью
+          <span class="content__title-red title-red">команды</span> !
+        </h1>
+        <p class="content__text">
           Мы делаем все, чтобы сотрудники росли, развивались и получали
           удовольствие.
         </p>
-        <button>Оставить заявку</button>
+        <button class="content__btn btn">Оставить заявку</button>
       </div>
-      <div class="content__wrapper-img">
-        <img class="content__img" src="assets/img-content.svg" alt="img" />
+      <div class="content__img">
+        <div class="content__img-circle">
+          <div class="content__img-container">
+            <img
+              class="content__image"
+              src="assets/img-content.svg"
+              alt="img"
+            />
+          </div>
+        </div>
       </div>
     </div>
+
     <div class="block-card">
       <h2 class="block-card__title">
-        Почему работать в <span class="block-card_title-red">подели</span> -
-        круто?
+        Почему работать в
+        <span class="block-card_title-red title-red">подели</span> - круто?
       </h2>
 
       <div class="wrapper-cards">
@@ -35,8 +47,8 @@
     </div>
 
     <div class="vacancies">
-      <h2 class="vacancies__title">
-        Свежие <span class="vacancies__title-red">вакансии</span>
+      <h2 class="vacancies__title title">
+        Свежие <span class="vacancies__title-red title-red">вакансии</span>
       </h2>
       <div class="vacancies__wrapper">
         <div class="vacancies__announcement">
