--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="block-card">
+    <div class="block-card block">
       <h2 class="block-card__title">
         Почему работать в
         <span class="block-card_title-red title-red">подели</span> - круто?
@@ -86,5 +86,50 @@
         <button class="vacancies__btn">Подробнее</button>
       </div>
     </div>
+
+    <div class="application">
+      <h2 class="application__title title">
+        Будем рады видеть вас
+        <span class="application__title-red title-red application_title_red">
+          в подели!</span
+        >
+      </h2>
+      <p class="application__text">
+        Оставьте ваши контактные данные и мы обязательно ответим!
+      </p>
+      <div class="container">
+        <form action="" class="form">
+          <input
+            class="form__input"
+            type="text"
+            name="name"
+            placeholder="Имя"
+          />
+          <input
+            class="form__input"
+            type="text"
+            name="name"
+            placeholder="Фамилия"
+          />
+          <input
+            class="form__input"
+            type="tel"
+            name="tel"
+            placeholder="телефон"
+          />
+          <button class="form__btn btn btn_theme_primary" type="submit">
+            Оставить заявку
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- <button class="btn btn_theme_primary">Оставить заявку</button>
+    <button class="btn btn_theme_primary" disabled>Оставить заявку</button>
+
+
+
+    <button class="btn btn_theme_secondary">Оставить заявку</button>
+    <button class="btn btn_theme_secondary" disabled>Оставить заявку</button> -->
   </body>
 </html>
